--- a/app/src/main/res/layout/demo_activity.xml
+++ b/app/src/main/res/layout/demo_activity.xml
@@ -66,7 +66,7 @@
         android:layout_marginBottom="8dp"
         android:background="@color/colorBlackDivider"/>
 
-    <com.csming1995.statuslayout.Component.StatusLayout
+    <com.csm.Component.StatusLayout
         android:id="@+id/statuslayout_demo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -77,7 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@mipmap/ic_launcher_round"/>
-    </com.csming1995.statuslayout.Component.StatusLayout>
+    </com.csm.Component.StatusLayout>
 
 
 
